crates/tui/tests/storybook/snapshots/app_dialog_permission__write_file_permission_dialog_with_file_view.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: text
---
* write_file src/main.rs                                               14:37:03
   1   fn main() {
   2       println!("hello, world");
   3   }





────────────────────────────────────────────────────────────────────────────────
 write_file: src/main.rs
╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌
 1   fn main() {
 2       println!("hello, world");
 3   }
╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌
 Allow?
  1. allow once
  2. deny
  3. allow write_file for this session
  4. allow write_file in ~/cwd

  press tab to add a reason…
 ○ normal                                                                 1:1 0%
