crates/tui/tests/storybook/snapshots/app_dialog_permission__write_file_permission_dialog_with_file_view.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 80 24
  0   0   1 fg=AnsiValue(208)
  0   1  11 attrs=dim
  0  69  10 attrs=dim
  1   2   3 fg=AnsiValue(244)
  1   7   2 fg=Rgb { r: 102, g: 217, b: 239 }
  1   9   1 fg=Rgb { r: 248, g: 248, b: 242 }
  1  10   4 fg=Rgb { r: 166, g: 226, b: 46 }
  1  14   4 fg=Rgb { r: 248, g: 248, b: 242 }
  2   2   3 fg=AnsiValue(244)
  2   7  13 fg=Rgb { r: 248, g: 248, b: 242 }
  2  20  14 fg=Rgb { r: 230, g: 219, b: 116 }
  2  34   2 fg=Rgb { r: 248, g: 248, b: 242 }
  3   2   3 fg=AnsiValue(244)
  3   7   1 fg=Rgb { r: 248, g: 248, b: 242 }
  9   0  80 fg=AnsiValue(208)
 10   1  10 fg=AnsiValue(208)
 11   0  80 fg=AnsiValue(244)
 12   0   3 fg=AnsiValue(244)
 12   5   2 fg=Rgb { r: 102, g: 217, b: 239 }
 12   7   1 fg=Rgb { r: 248, g: 248, b: 242 }
 12   8   4 fg=Rgb { r: 166, g: 226, b: 46 }
 12  12   4 fg=Rgb { r: 248, g: 248, b: 242 }
 13   0   3 fg=AnsiValue(244)
 13   5  13 fg=Rgb { r: 248, g: 248, b: 242 }
 13  18  14 fg=Rgb { r: 230, g: 219, b: 116 }
 13  32   2 fg=Rgb { r: 248, g: 248, b: 242 }
 14   0   3 fg=AnsiValue(244)
 14   5   1 fg=Rgb { r: 248, g: 248, b: 242 }
 15   0  80 fg=AnsiValue(244)
 16   1   6 attrs=dim
 17   0   1 bg=AnsiValue(237)
 17   1   1 fg=Black bg=White
 17   2   3 bg=AnsiValue(237) attrs=dim
 17   5  10 fg=AnsiValue(208) bg=AnsiValue(237)
 17  15  65 bg=AnsiValue(237)
 18   1   4 attrs=dim
 19   1   4 attrs=dim
 20   1   4 attrs=dim
 22   2  26 attrs=dim
 23   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 23  10  64 bg=AnsiValue(233)
 23  74   6 fg=AnsiValue(244) bg=AnsiValue(233)
